# full-stack-template-db

./: .dockerignore  AGENTS.md  dev.sh  docker-compose.yml
backend/: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  mypy.ini  pre-commit.sh  pyproject.toml  pyrightconfig.json  requirements.txt
backend/backend/: .env.example  __init__.py  cli.py  main.py  run.py
backend/backend/alembic/: __init__.py  env.py
backend/backend/app/: router.py
backend/backend/app/admin/: __init__.py
backend/backend/app/admin/api/: __init__.py  router.py
backend/backend/app/admin/crud/: __init__.py  crud_data_rule.py  crud_data_scope.py  crud_dept.py  crud_login_log.py  crud_menu.py  crud_opera_log.py  crud_role.py  crud_user.py  crud_user_password_history.py
backend/backend/app/admin/model/: __init__.py  data_rule.py  data_scope.py  dept.py  login_log.py  m2m.py  menu.py  opera_log.py  role.py  user.py  user_password_history.py
backend/backend/app/admin/schema/: captcha.py  chat.py  data_rule.py  data_scope.py  dept.py  login_log.py  menu.py  opera_log.py  role.py  token.py  user.py  user_password_history.py
backend/backend/app/admin/service/: auth_service.py  chat_service.py  data_rule_service.py  data_scope_service.py  dept_service.py  login_log_service.py  menu_service.py  opera_log_service.py  plugin_service.py  role_service.py  user_password_history_service.py  user_service.py
backend/backend/app/admin/tests/: conftest.py
backend/backend/app/admin/utils/: cache.py  password_security.py
backend/backend/app/task/: __init__.py  actions.py  celery.py  database.py  enums.py  session.py
backend/backend/app/task/api/: router.py
backend/backend/app/task/crud/: crud_result.py  crud_scheduler.py
backend/backend/app/task/model/: __init__.py  result.py  scheduler.py
backend/backend/app/task/schema/: control.py  result.py  scheduler.py
backend/backend/app/task/service/: result_service.py  scheduler_service.py
backend/backend/app/task/tasks/: base.py  beat.py  tasks.py
backend/backend/app/task/utils/: schedulers.py  tzcrontab.py
backend/backend/common/: context.py  dataclasses.py  enums.py  i18n.py  log.py  model.py  pagination.py  queue.py  schema.py
backend/backend/common/exception/: errors.py  exception_handler.py
backend/backend/common/prometheus/: __init__.py  instruments.py
backend/backend/common/response/: __init__.py  response_code.py  response_schema.py
backend/backend/common/security/: jwt.py  limiter.py  permission.py  rbac.py
backend/backend/common/socketio/: __init__.py  actions.py  server.py
backend/backend/core/: conf.py  path_conf.py  registrar.py
backend/backend/database/: db.py  redis.py
backend/backend/middleware/: access_middleware.py  jwt_auth_middleware.py  opera_log_middleware.py  state_middleware.py
backend/backend/plugin/: __init__.py  tools.py
backend/backend/plugin/casbin_rbac/: .gitignore  README.md  plugin.toml  rbac.py
backend/backend/plugin/casbin_rbac/crud/: crud_api.py  crud_casbin.py
backend/backend/plugin/casbin_rbac/model/: __init__.py
backend/backend/plugin/casbin_rbac/service/: api_service.py  casbin_service.py
backend/backend/plugin/config/: enums.py
backend/backend/plugin/config/crud/: crud_config.py
backend/backend/plugin/config/model/: __init__.py  config.py
backend/backend/plugin/config/schema/: config.py
backend/backend/plugin/config/service/: config_service.py
backend/backend/plugin/dict/: __init__.py
backend/backend/plugin/email/: __init__.py
backend/backend/plugin/notice/: __init__.py  enums.py
backend/backend/plugin/oauth2/: __init__.py  enums.py
backend/backend/plugin/s3/: .gitignore  README.md  __init__.py  plugin.toml  requirements.txt
backend/backend/scripts/: lint.sh
backend/backend/sql/postgresql/: init_test_data.sql  update_menu_data.sql
backend/backend/utils/: _await.py  build_tree.py  console.py  demo_site.py  dynamic_config.py  encrypt.py  file_ops.py  health_check.py  import_parse.py  openapi.py  otel.py  re_verify.py  redis_info.py  request_parse.py  serializers.py  server_info.py  snowflake.py  timezone.py  trace_id.py
backend/deploy/backend/docker-compose/: .env.docker
backend/typings/celery/: __init__.pyi  beat.pyi  exceptions.pyi  schedules.pyi  signals.pyi
backend/typings/celery/app/: __init__.pyi  base.pyi
backend/typings/celery/backends/: __init__.pyi  base.pyi
backend/typings/celery/utils/: __init__.pyi  log.pyi  time.pyi
backend/typings/celery_aio_pool/: __init__.pyi
backend/typings/fast_captcha/: __init__.pyi
backend/typings/fastapi_oauth20/: __init__.pyi
backend/typings/ip2loc/: __init__.pyi
backend/typings/opendal/: __init__.pyi
backend/typings/opentelemetry/: __init__.pyi
backend/typings/opentelemetry/instrumentation/: __init__.pyi
backend/typings/socketio/: __init__.pyi
backend/typings/sqlalchemy_crud_plus/: __init__.pyi
backend/typings/user_agents/: __init__.pyi
(+758 files in other folders)
