[project]
name = "fastapi_best_architecture"
description = """
A RBAC (Role-Based Access Control) permission control system built on FastAPI, featuring a unique pseudo-three-tier
architecture design, with built-in basic implementation of fastapi admin as a template library, free and open-source.
"""
authors = [{ name = "Wu Clan", email = "jianhengwu0407@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dynamic = ['version']
dependencies = [
    "aiosmtplib>=5.0.0",
    "alembic>=1.17.2",
    "asgiref>=3.11.0",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "cappa>=0.30.4",
    "celery>=5.6.0",
    # When celery version < 6.0.0
    # https://github.com/celery/celery/issues/7874
    "celery-aio-pool>=0.1.0rc8",
    "cryptography>=46.0.3",
    "dulwich>=0.24.10",
    "fast-captcha>=0.3.2",
    "fastapi-limiter>=0.2.0",
    "fastapi-pagination>=0.15.0",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.123.5",
    "flower>=2.0.1",
    "gevent>=25.9.1",
    "granian>=2.6.0",
    "ip2loc>=1.0.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "msgspec>=0.20.0",
    "openai>=1.0.0,<2.0.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.39.0",
    "opentelemetry-instrumentation-fastapi>=0.60b0",
    "opentelemetry-instrumentation-logging>=0.60b0",
    "opentelemetry-instrumentation-redis>=0.60b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.60b0",
    "opentelemetry-sdk>=1.39.0",
    "prometheus-client>=0.23.1",
    "psutil>=7.1.3",
    # https://github.com/fastapi-practices/fastapi_best_architecture/issues/887
    "psycopg[binary]==3.2.10",
    "pwdlib>=0.3.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-jose>=3.5.0",
    "python-socketio>=5.15.0",
    "redis[hiredis]>=7.1.0",
    "rtoml>=0.13.0",
    "sqlalchemy-crud-plus>=1.13.1",
    "sqlalchemy[asyncio]>=2.0.44",
    "sqlparse>=0.5.4",
    "starlette-context>=0.4.0",
    "user-agents>=2.2.0",
    "aio-pika>=9.5.8",
    "wait-for-it>=2.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-sugar>=1.1.1",
    "prek>=0.2.19",
    "types-pyyaml>=6.0.12.20250915",
    "mypy>=1.19.1",
    "pyright>=1.1.407",
    "ruff>=0.14.10",
]

[tool.uv]
python-downloads = "manual"
default-groups = ["dev"]


[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.hatch.version]
path = "backend/__init__.py"

[project.scripts]
fba = "backend.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
line-length = 119


[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D211",    # no-blank-line-before-class
    "D213",    # multi-line-summary-second-line
    "S104",    # Possible binding to all interfaces
    "RUF002",  # Docstring contains ambiguous
    "RUF003",  # Comment contains ambiguous
    "COM812",  # Missing trailing comma
    "D203",    # 1 blank line required before class docstring，
    "ERA001",  # Found commented-out code
    "TD",      # TODO,
    "FIX002",  # Line contains TODO,
    "TRY300",  # Consider moving this statement to an `else` block
    "C901",    # Function is too complex
    "PLR0912", # Too many branches
    "PLR0911", # Too many return statements
    "PLR0915", # Too many statements
    "PLR2004", # Magic value used in comparison
    "BLE001",  # Do not catch blind exception
    "TC001",   # Move application import into a type-checking block
    "TC002",   # Move third-party import into a type-checking block
    "TC003",   # Move standard library import into a type-checking block
    "PLR0913", # Too many arguments
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",   # Use of `assert` detected
    "ARG001", # Unused function argument
    "SLF001", # Private member accessed
    "PT018",  # Assertion should be broken down
]

[tool.ruff.lint.isort]
case-sensitive = true
length-sort = true
lines-after-imports = 2

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
warn_unreachable = true
strict_optional = true
follow_imports = "silent"
show_error_codes = true
pretty = true
color_output = true
python_version = "3.13"
exclude = ["alembic/"]

[tool.pyright]
include = ["**"]
exclude = ["**/__pycache__", "**/.venv"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
typeCheckingMode = "strict"
stubPath = "typings"
